# plane_edge_vo

./: README.md
src/iai_kinect2/kinect2_viewer/: CMakeLists.txt
src/plane_edge_vo/: CMakeLists.txt  package.xml
src/plane_edge_vo/include/plane_edge_vo/: capture.h  data_reading.h  display.h  edge_point_extraction.h  plane_extraction.h  plane_feature_matching.h  plane_param_estimation.h  pose_estimation.h  types.h
src/plane_edge_vo/launch/: kinect2_bridge.launch
src/plane_edge_vo/launch/run/: MATRIX.txt  eval.sh  evaluate.sh  file_format.txt  format_depth.sh  format_groundtruth.sh  format_rgb.sh  frame_skip.sh  run.sh  run_loopclosing.sh  run_online.sh  run_puzzle.sh  run_view.sh
src/plane_edge_vo/src/: CMakeLists.txt  main.cpp
src/plane_edge_vo/src/backend/: loop_closing.cpp  pose_graph_optimization.cpp  traj_puzzle.cpp
src/plane_edge_vo/src/data_reading/: capture.cpp  data_reading.cpp
src/plane_edge_vo/src/motion_estimation/: pose_estimation.cpp
src/plane_edge_vo/src/plane_edge_extraction/: edge_point_extraction.cpp  plane_extraction.cpp  plane_feature_matching.cpp
src/plane_edge_vo/src/plane_fitting/: plane_param_estimation.cpp
src/plane_edge_vo/src/plane_fusing/: plane_fusing.cpp
src/rosaria_client/src/: go_three_second.cpp  spin_clockwise.cpp  teleop.cpp
